[project]
name = "vlm-guided-creative-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "diffusers>=0.35.2",
    "pillow>=12.0.0",
    "protobuf>=6.33.0",
    "safetensors>=0.6.2",
    "sentencepiece>=0.2.1",
    "torch==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
    "transformers>=4.57.1",
    "xformers>=0.0.29.post3",
]

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "torch-cuda" },
]
torchvision = [
    { index = "torch-cuda" },
]
